--- a/problems/0707.设计链表.md
+++ b/problems/0707.设计链表.md
@@ -284,9 +284,8 @@ Java：
 class ListNode {
 int val;
 ListNode next;
-ListNode(){}
-ListNode(int val) {
-this.val=val;
+ListNode(int x) {
+this.x=x;
 }
 }
 class MyLinkedList {
