--- a/problems/0005.最长回文子串.md
+++ b/problems/0005.最长回文子串.md
@@ -265,6 +265,59 @@ public:
 ## Java
 
 ```java
+class Solution {
+    //中心扩散
+    public String longestPalindrome(String s) {
+        int len = s.length();
+        //字符串长度为1
+        if(len<2){
+            return s;
+        }
+
+        int maxLen=1;
+        int begin=0;
+
+        char[] charArray = s.toCharArray();
+        for(int i=0;i<len-1;i++){
+            //回文中心是一个字符
+            int oddLen = expandAroundCenter(charArray,i,i);
+            //回文中心是两个字符
+            int evenLen = expandAroundCenter(charArray,i,i+1);
+            //取最大值
+            int curMaxLen = Math.max(oddLen,evenLen);
+            if(curMaxLen>maxLen){
+                maxLen = curMaxLen;
+                //这一步要在纸上画图发现规律
+                begin = i - (maxLen - 1) / 2;
+            }
+        }
+        return s.substring(begin,begin + maxLen);
+    }
+    /**
+    * @Param charArray 原始字符串的字符数组
+    * @Param left      起始左边界
+    * @Param right     起始右边界
+    * @return    回文串长度
+     */
+    private int expandAroundCenter(char[] charArray,int left,int right){
+        //当 left=right 时，回文中心是一个字符，回文串的长度是奇数
+        //当 right=left+1 时，回文中心是两个字符，回文串的长度是偶数
+        int len=charArray.length;
+        int i=left;
+        int j=right;
+        while(i >= 0 && j<len){
+            if(charArray[i] == charArray[j]){
+                i--;
+                j++;
+            }else{
+                break;
+            }
+        }
+        //跳出while循环，此时charArray[i] != charArray[j]
+        //回文串的长度是 j-i+1-2=j-i-1
+        return j-i-1;
+    }
+}
 ```
 
 ## Python
